--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Git Action 테스트 첫번째</h1>
+	<h1 style="color:red;" >Git Action 테스트 첫번째</h1>
 </body>
 </html>
